<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="150dp"
        android:hint="@string/YearofBirth"
        android:id="@+id/year"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/gender"
        android:id="@+id/gender"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/diagnosis"
        android:id="@+id/btnDiagnosis"/>

</LinearLayout>